<resources>
    <string name="app_name">CtAssistant</string>

    <string name="text_choose_school">选择学校</string>
    <string name="text_refresh_data">刷新数据</string>
    <string name="key_has_schools">has_schools</string>
    <string name="key_old_school">old_school</string>
    <string name="key_old_code">old_code</string>
    <string name="text_search_school">查找学校</string>
    <string name="text_get_sch_err">获取学校失败</string>
    <string name="add_new_node">添加新节点</string>
    <string name="delete_new_node">删除新节点</string>

    <string name="text_choose_ay">选择学期</string>
    <string name="text_choose_base_week">选择第一周一</string>
    <string name="text_sno">学号</string>
    <string name="text_pass">密码</string>
    <string name="text_export_to_calendar">导入日历</string>
    <string name="text_login">登陆</string>
    <string name="text_ask_confirmation_of_delete">确认删除?</string>
    <string name="text_confirm">确认</string>
    <string name="text_confirmation_of_del_ct_account">确认删除日历账户: %s ?</string>
    <string name="text_del_failed">删除失败</string>
    <string name="text_del_success">删除成功</string>
    <string name="text_apply_adapter">申请适配</string>
    <string name="text_sub_apply_adapter">请仔细填写以下信息，方便我们对你的学校进行适配。</string>
    <string name="text_apply_adapter_school_name">学校全称</string>
    <string name="text_apply_adapter_school_website">学校官网</string>
    <string name="text_apply_adapter_school_test_account">测试账号</string>
    <string name="text_apply_adapter_school_test_password">测试账号密码</string>
    <string name="text_apply_adapter_school_submit">提交信息</string>
    <string name="text_help">帮助</string>
    <string name="key_school_adapter_hint">如果想要适配你的学校，可以选择下方GITHUB选项，为你的学校适配 </string>
    <string name="key_school_adapter_hint_title">没有找到你的学校? </string>
    <string name="github_ct_server">https://github.com/Vove7/CtAssistant_Server</string>
    <string name="begin_import">开始导入</string>
    <string name="text_running">正在运行</string>
    <string name="text_get_success">获取成功</string>
    <string name="text_get_failed">获取失败</string>
    <string name="text_geting_the_classtable">正在获取课表...</string>
    <string name="text_add_success">添加完成</string>
    <string name="text_add_failed">添加失败</string>
    <string name="text_calendar_account_create_failed">日历账户创建失败</string>
    <string name="text_unknow_error">未知错误</string>
    <string name="sample_ct">低等数学@教室</string>
    <string name="tsno">151404060111</string>
    <string name="tpass">V7131400</string>
</resources>
