<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ApplyAdapterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#21062e">

            <android.support.v7.widget.Toolbar
                android:id="@+id/bottom_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                app:contentInsetStart="0dp"
                android:focusable="true"
                app:contentInsetStartWithNavigation="-5dp"
                app:navigationIcon="@drawable/ic_close_black_24dp"
                app:title="@string/text_apply_adapter"
                app:titleTextColor="#757575" />
        </android.support.design.widget.AppBarLayout>
        <!--title-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:gravity="center"
                android:padding="@dimen/dimen3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/apply_adapter_text_font_25dp"
                android:text="@string/text_apply_adapter"/>
            <TextView
                android:padding="@dimen/dimen3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_sub_apply_adapter"/>
        </LinearLayout>
        <!--content-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--学校名-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/dimen10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:text="@string/text_apply_adapter_school_name"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    android:id="@+id/apply_adapter_school_name"/>
            </LinearLayout>
            <!--网站-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/dimen10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:text="@string/text_apply_adapter_school_website"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    android:id="@+id/apply_adapter_school_website"/>
            </LinearLayout>
            <!--测试账户-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/dimen10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:text="@string/text_apply_adapter_school_test_account"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    android:id="@+id/apply_adapter_school_test_account"/>
            </LinearLayout>
            <!--密码-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/dimen10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:text="@string/text_apply_adapter_school_test_password"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    android:id="@+id/apply_adapter_school_test_password"/>
            </LinearLayout>
            <!--提交-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/dimen10dp"
                android:gravity="center"
                android:layout_height="wrap_content">
                <Button
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_apply_adapter_school_submit"
                    android:id="@+id/apply_adapter_school_submit"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>